--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
             <artifactId>lombok</artifactId>
             <version>1.18.38</version>
         </dependency>
+
+        <!-- Jackson za JSON serijalizaciju -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
